# homelab-ai-rnd-stack

./: .env.example  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.trunk/: trunk.yaml
cluster-snek/cli/: main.py
cluster-snek/config/: schema.py
cluster-snek/generators/: generator.py
cluster-snek/integrations/: cerbos_integration_module.py  github_integration.py  vector_store_integration.py
cluster-snek/scratchpad-wip/: integration_tests_and_setup.py  refactored_project_structure.py  test_refactored_project_structure.py
cluster-snek/sources/: manager.py
cluster-snek/utils/: utility_modules.py
deployments/core/argocd/: values.yaml
deployments/core/cert-manager/: values.yaml
deployments/core/ingress-nginx/: values.yaml
deployments/core/metallb/: values.yaml
deployments/dev/jupyter/: values.yaml
deployments/dev/jupyter/examples/: ollama-demo.ipynb
deployments/dev/ollama/: values.yaml
deployments/dev/ollama/templates/: modelfile.yaml
deployments/gitlab/: values.yaml
deployments/monitoring/: values.yaml
docs/: build-research.md  complete_documentation.md  implementation_plan.md  migration_and_deployment_guides.md  project_summary_conclusion.md
examples/: config.yaml  example_configurations.yaml
overrides/global/: values.yaml
scripts/: deploy.ps1
scripts/ansible/: k3s-install.yml
tests/: test_config.py
vectorweight/: __init__.py
vectorweight/cli/: __init__.py
vectorweight/config/: __init__.py  loader.py  schema.py
vectorweight/generators/: __init__.py  deployment.py
